// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionsMenu renders when authors page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when conferences page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when experiments page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when home page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when jobs page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when literature page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={true}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when seminars page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when submissions page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <DropdownMenu
      className="dropdown mh4 m-mh2"
      disabled={false}
      overlayClassName="more-collections-menu"
      title={
        <Button
          block={false}
          className="button-no-background ml4"
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
        >
          <span
            className="button-title f5 white"
          >
             
            More...
             
          </span>
        </Button>
      }
    >
      <MenuItem
        className="dropdown-menu-item"
        key="more.institutions"
      >
        <Link
          className="dropdown-link"
          to="/institutions"
        >
          Institutions
        </Link>
      </MenuItem>
      <MenuItem
        className="dropdown-menu-item"
        key="more.experiments"
      >
        <Link
          className="dropdown-link"
          to="/experiments"
        >
          Experiments
        </Link>
      </MenuItem>
    </DropdownMenu>
    <NewFeatureTag
      className="centered"
    />
  </Col>
</Row>
`;
